# postgres-tq

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: python-package.yaml
postgrestq/: __init__.py  task_queue.py
postgrestq/sql/: check_expired_leases.sql  get_expired_tasks.sql  schema.sql
tests/: test_task_queue.py
