[tool.pdm]
[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.3",
]
lint = [
    "flake8>=6.1.0",
]
mypy = [
    "mypy>=1.6.1",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[project]
name = "postgres-tq"
version = "1.2.1"
description = "Postgres Based Task Queue"
authors = [
    {name = "FlixTech", email = "open-source@flixbus.com"},
]
dependencies = [
    "psycopg[binary]>=3.1.12",
    "psycopg-pool>=3.1.12",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"postgrestq" = ["py.typed"]
